# has-nerd-font

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  dprint.json  mise.toml
.github/workflows/: ci.yml  release.yml
docs/: has-nerd-font-design.md
docs/plans/: 2026-02-20-has-nerd-font-v1-design.md  2026-02-20-has-nerd-font-v1-implementation.md  2026-02-21-iterm2-default-profile-design.md  2026-02-21-iterm2-default-profile-implementation.md  2026-02-21-zed-resolver-design.md
src/: env.rs  font.rs  lib.rs  main.rs  plist.rs  terminal.rs  types.rs
src/config/: alacritty.rs  hyper.rs  iterm2.rs  mod.rs  terminal_app.rs  vscode.rs  zed.rs
tests/: alacritty.rs  bundled.rs  cli_integration.rs  detect_orchestration.rs  detection_result_contract.rs  env_layer.rs  explicit_override.rs  hyper.rs  iterm2_macos.rs  no_resolver.rs  remote_and_dispatch.rs  ssh.rs  terminal_app_macos.rs  terminal_app_resolver.rs  terminal_layer.rs  vscode.rs  zed.rs
tests/snapshots/: alacritty__alacritty_default_explain.snap  alacritty__alacritty_default_json.snap  alacritty__alacritty_malformed_explain.snap  alacritty__alacritty_malformed_json.snap  alacritty__alacritty_nerd_font_explain.snap  alacritty__alacritty_nerd_font_json.snap  alacritty__alacritty_non_nerd_font_explain.snap  alacritty__alacritty_non_nerd_font_json.snap  bundled__bundled_conductor_json.snap  bundled__bundled_ghostty_json.snap  bundled__bundled_kitty_json.snap  bundled__bundled_opencode_json.snap  bundled__bundled_superset_env_explain.snap  bundled__bundled_superset_json.snap  explicit_override__override_disabled_explain.snap  (+48 more)
tests/support/: mod.rs
(+20 files in other folders)
