[package]
name = "has-nerd-font"
version = "0.1.0"
edition = "2024"

[lib]
name = "has_nerd_font"

[[bin]]
name = "has-nerd-font"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
