[package]
name = "has-nerd-font"
version = "0.0.0-dev"
edition = "2024"

[lib]
name = "has_nerd_font"

[[bin]]
name = "has-nerd-font"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
tempfile = "3"
