[package]
name = "has-nerd-font"
version = "0.0.0-dev"
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["nerd-font", "terminal", "cli"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sargunv/has-nerd-font"
description = "Detect whether the current terminal can render Nerd Font glyphs"

[lib]
name = "has_nerd_font"

[[bin]]
name = "has-nerd-font"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json5 = "0.2"
toml = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
tempfile = "3"
